# user_bot

./: .env  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
postgresql/: postgresql.conf
src/: alembic.ini  app.py
src/handlers/: users.py
src/methods/: users.py
src/migrations/: env.py
src/migrations/versions/: 1717815653_391849a9c584.py
src/models/: users.py
src/settings/: base.py  db.py
src/utils/: webinar_funnel.py
